# routes/categories.js
@@ -5,5 +5,7 @@ const categoriesController = require('../controllers/categoriesController');
 
 router.get('/', categoriesController.getAllCategories);
 router.post('/', categoriesController.createCategory);
+router.put('/:id', categoriesController.updateCategory);
+router.delete('/:id', categoriesController.deleteCategory);
 
 module.exports = router;
